[package]
name = "discontinued"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
http = "0.2.9"
serde = {version = "1.0.164", features=["derive"]}
serde_json = "1.0.97"
surrealdb = "1.0.0-beta.9"
tokio = {version = "1.28.2", features=["full"]}
tower = "0.4.13"
tower-http = {version = "0.4.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
